fix: merge 후 에러 해결
HomeFragment 네비게이션 에러 해결

--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -177,7 +177,7 @@
         tools:layout="@layout/fragment_favorite" />
     <fragment
         android:id="@+id/item_home"
-        android:name="com.petpal.swimmer_customer.ui.HomeFragment"
+        android:name="com.petpal.swimmer_customer.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
